--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdd06d493d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f84760c14d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdd06db3490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdd06db3690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8475aa92d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8475aa94d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdd07312d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdd07312f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f847634abd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f847634add0&gt;]</pre>
 </div>
 
 </div>
