--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7741a17ad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8b39aec9d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7741733490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f77417336d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8b39811510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8b39811710&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7741ca0dd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7741ca0fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8b39d6fd50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8b39d6ff50&gt;]</pre>
 </div>
 
 </div>
