--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbe3ebd6110&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff73449d3d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbe3e5ceb90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbe3e5cee90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff7344d5450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff7344d5650&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbe3ee69c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbe3ee69e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff734726d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff734726f50&gt;]</pre>
 </div>
 
 </div>
