--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1e10c6bc50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efc91a05610&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1e10962210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1e1095a650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efc9170d310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efc9170d550&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1e10ebe9d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1e10ec8e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efc91c7fd10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efc91c7ff50&gt;]</pre>
 </div>
 
 </div>
