--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8b5fe07290&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fae5b633c10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8b5fe393d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8b5fe39610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fae5b3afa10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fae5b3aff50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8b603b3c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8b603b3e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fae5b924c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fae5b924e10&gt;]</pre>
 </div>
 
 </div>
