--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3e76523410&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1009d8bd50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3e76244390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3e76244590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1009762990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1009762d90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3e767bfc10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3e767bfe10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1009cd3c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1009cd3e50&gt;]</pre>
 </div>
 
 </div>
