--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f31bea13c50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fac2191c710&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f31bea7c490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f31bea7c690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fac2194e990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fac2194ec50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f31befdad90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f31befdaf90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fac21ebbb90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fac21ebbdd0&gt;]</pre>
 </div>
 
 </div>
