--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9df3a0e550&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbb76353ed0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9df3a56f10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9df3a56d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbb763a82d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbb763a84d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9df3ca8d10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9df3ca8f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbb76922c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbb76922e10&gt;]</pre>
 </div>
 
 </div>
