--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb5dc0fa290&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f560072f910&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb5dbe1da90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb5dbe1df10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f56007753d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f56007755d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb5dc38dcd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb5dc38ded0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5600ceed50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5600ceef50&gt;]</pre>
 </div>
 
 </div>
