--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7e1bd87d50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f83a0131810&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7e1baa12d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7e1baa1510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f83a01823d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f83a01825d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7e1c01ab50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7e1c01ad90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f83a06fdcd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f83a06fded0&gt;]</pre>
 </div>
 
 </div>
