--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f83a0131810&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2b16ef82d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f83a01823d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f83a01825d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b16f34390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2b16f34c10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f83a06fdcd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f83a06fded0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b174a3bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2b174a3dd0&gt;]</pre>
 </div>
 
 </div>
