--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fba2081ea90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5b91b83890&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fba2051f350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fba2051f550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5b91bf34d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5b91bf36d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fba20a99bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fba20a99dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5b92152d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5b92152f50&gt;]</pre>
 </div>
 
 </div>
