--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2c560e6dd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f01c8dc9350&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2c56757310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2c56757510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f01c8e25d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f01c8e25b10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2c569aab50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2c569aad50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f01c9394b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f01c9394dd0&gt;]</pre>
 </div>
 
 </div>
