--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7b54c5d410&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4042fdab50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7b5492f650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7b5492f850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4043033110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4043033350&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7b54ef6ed0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7b54f01110&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f40435aaa90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f40435aacd0&gt;]</pre>
 </div>
 
 </div>
