--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f67f24c5ad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4b563eb310&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f67f21eb510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f67f21e53d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4b561184d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4b56118710&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f67f2a87910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f67f2a90dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4b56676e10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4b56681090&gt;]</pre>
 </div>
 
 </div>
