--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f56d736f910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f80dbb86d90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f56d708f550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f56d708f750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f80dbbad3d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f80dbbad5d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f56d7645d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f56d75f8090&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f80dbdffd10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f80dbdfff10&gt;]</pre>
 </div>
 
 </div>
