--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f80dbb86d90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0cd76f6ad0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f80dbbad3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f80dbbad5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0cd77584d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0cd77586d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f80dbdffd10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f80dbdfff10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0cd7cc6e10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0cd7cc6fd0&gt;]</pre>
 </div>
 
 </div>
