--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efc989b2e10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1b3492fa50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efc9838d3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efc9838d590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1b349994d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1b34999690&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efc98c29cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efc98c29e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1b34ef8dd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1b34ef8f90&gt;]</pre>
 </div>
 
 </div>
