--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1b3492fa50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f57da815690&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1b349994d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1b34999690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f57da52c490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f57da52cf50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1b34ef8dd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1b34ef8f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f57dadc8b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f57dadc8d10&gt;]</pre>
 </div>
 
 </div>
