--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6ba6eea690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5e1c2f7d90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ba6f11410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6ba6f11610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5e1c016310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5e1c016510&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ba748bd10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6ba748bf10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5e1c593bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5e1c593dd0&gt;]</pre>
 </div>
 
 </div>
