--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fac1070d050&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9926944b10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fac1072d310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fac1072d510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9926f62390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9926f62590&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fac10984bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fac10984dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f99274d3c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f99274d3e90&gt;]</pre>
 </div>
 
 </div>
