--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2be384fc90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f686bff3290&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2be388f290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2be388f490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f686b997b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f686b97e310&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2be3e0ab50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2be3e0ad50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f686beff910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f686bf08dd0&gt;]</pre>
 </div>
 
 </div>
