--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc4ea4e84d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb4e78d5f10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc4ea533b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc4ea533d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb4e79281d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb4e79283d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc4eaaa1b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc4eaaa1d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb4e7e96a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb4e7e96c50&gt;]</pre>
 </div>
 
 </div>
