--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f98b605ef10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f784d135250&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f98b5d674d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f98b5d676d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f784ce4f4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f784ce4f6d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f98b62d6d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f98b62d6f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f784d3aee90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f784d3b90d0&gt;]</pre>
 </div>
 
 </div>
