--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f05d494aa90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f30ff802510&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f05d4317510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f05d4317710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f30ff52be90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f30ff52bbd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f05d4875e50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f05d4880090&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f30ffa9cdd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f30ffa9cfd0&gt;]</pre>
 </div>
 
 </div>
